Added api key, finished data API and frontend. Need to fix time filters.
